# DAGonCAPIO

./: .gitignore  .zshrc  README.md  dagon.ini.sample  gcloudkeys  google_cloud  google_cloud.pub  googlekey.pem  googlekey.pub  requirements.txt  setup.cfg  setup.py
app/: WF2-transversal-demo.py  ccmmma-dagon-app-new.py  ccmmma-dagon-app.py  distributed_TW1.py
dagon/: __init__.py  batch.py  config.py  dag_tps.py  docker_task.py  remote.py  task.py
dagon/TPS_api/: __init__.py
dagon/api/: __init__.py  server.py
dagon/cloud/: __init__.py  cloud_manager.py
dagon/communication/: __init__.py  connection.py  data_transfer.py  ssh.py
dagon/dockercontainer/: __init__.py  container.py  docker_client.py
dagon/ftp_publisher/: __init__.py
dagon/peer2peer/: node.py
dagon/visualization/: draw.py
docs/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  old.rst  py-modindex.html  search.html  searchindex.js
docs/_images/: inheritance-7397251f25741a6aceb80391be10f5fdfe9388f2.png.map  inheritance-84499c9b279bb46913e130e748dc42f1740b2c3b.png.map  inheritance-9d842fe37d3b394bccd7fc7c1a4235e201284e5e.png.map  inheritance-a407b80da5ba7b77ff6c5509f6f9ca5296fda572.png.map  inheritance-ad71330297f6a87fa1c2ed8877346558c3e2839d.png.map  inheritance-b960ababc54b461948a60b9df621d57b8ee46d90.png.map  inheritance-d96e54d8e1f6a04d17b3605d07b4dd17670574fc.png.map  inheritance-fc9bb9d9826bb06132ec203ddad8b4d6dd2abc40.png.map
docs/_modules/: dagon.html  index.html
docs/_sources/: index.rst.txt
docs/source/: conf.py  getting_started.rst  index.rst  modules.rst  other.rst  stager.rst  tasks_supported.rst  workflow.rst
examples/: DataFlow-Demo-Cloud.gv  README.md  Transversal-demo-TPS.py  WF1-transversal-demo-1.py  WF2-transversal-demo.py  dagonDOkey.pem  dagonkey.pem  dataflow-demo-2.py  dataflow-demo-cloud-docker.py  dataflow-demo-cloud.py  dataflow-demo-docker-remote.py  dataflow-demo-docker.json  dataflow-demo-docker.py  dataflow-demo-remote.py  dataflow-demo-service.py  dataflow-demo-slurm-remote.py  dataflow-demo-slurm.py  dataflow-demo.json  dataflow-demo.py  distributed_TW2.py  globus_tokens.py  googlekey.pem  key  taskflow-demo-docker.py  taskflow-demo.py  test.py  transversal-json-demo.py
examples/Transversal_test_scripts/: DAGtp_workflow_1.json  DAGtp_workflow_2.json  Single-demo-docker.json  dataflow-demo-docker.json  script_multiworkflow.sh  script_tps.sh  transversal-docker-merra-multiworkflow.py
examples/app/: README.md  ccmmma-dagon-app-1.py  conagua-app.py  envapp.py
examples/jsons/: MW-demo.json  MW-demo2.json  MW-demo3.json  NewDAG-with-cycles.json  (+3 more)
jsons/: wf2-transversal-demo.json
test-output/: round-table.gv
(+84 files in other folders)
