[metadata]
name = dagonstar
version = 1.0.0
author = Raffaele Montella
author_email = raffaele.montella@uniparthenope.it
description = DAGon* is a simple Python based workflow engine able to run job on everything from the local machine to distributed virtual HPC clusters hosted in private and public clouds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DagOnStar/dagonstar
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    dagon
    dagon.api
    dagon.cloud
    dagon.communication
    dagon.dockercontainer
    dagon.ftp_publisher
python_requires = >=3.8.15
install_requires =
    requests
    fabric3
    boto3==1.10.19
    paramiko==2.6
    graphviz==0.8.3
    globus_sdk==1.5.0
    docker==3.5.0
    apache-libcloud==2.3.0
    configparser==3.5.0
    flask
    Flask-API
    pycrypto