[metadata]
name = dagonstar
version = 1.0.0
author = Raffaele Montella
author_email = raffaele.montella@uniparthenope.it
description = DAGon* is a simple Python based workflow engine able to run job on everything from the local machine to distributed virtual HPC clusters hosted in private and public clouds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DagOnStar/dagonstar
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    dagon
    dagon.api
    dagon.cloud
    dagon.communication
    dagon.dockercontainer
    dagon.ftp_publisher
python_requires = >=3.8.15
install_requires =
    apache-libcloud==2.3.0
    bcrypt==4.0.1
    blinker==1.6.2
    boto3==1.10.19
    botocore==1.13.50
    build==1.0.3
    certifi==2023.5.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    click==8.1.3
    configparser==3.5.0
    cryptography==40.0.2
    docker==3.5.0
    docker-pycreds==0.4.0
    docutils==0.15.2
    Fabric3==1.14.post1
    Flask==2.3.2
    Flask-API==3.0.post1
    globus-sdk==1.5.0
    graphviz==0.8.3
    idna==3.4
    importlib-metadata==6.6.0
    itsdangerous==2.1.2
    Jinja2==3.1.2
    jmespath==0.10.0
    MarkupSafe==2.1.2
    packaging==23.2
    paramiko==2.6.0
    pycparser==2.21
    pycrypto==2.6.1
    PyJWT==1.7.1
    PyNaCl==1.5.0
    pyproject_hooks==1.0.0
    python-dateutil==2.8.2
    requests==2.30.0
    s3transfer==0.2.1
    six==1.16.0
    tomli==2.0.1
    urllib3==1.25.11
    websocket-client==1.5.1
    Werkzeug==2.3.4
    zipp==3.15.0